--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+python-sonicprobe (0.3.7) unstable; urgency=medium
+
+  * Bug fixed urisup.
+
+ -- Adrien DELLE CAVE (Decryptus) <adc@doowan.net>  Sat, 23 Nov 2019 22:35:11 +0100
+
 python-sonicprobe (0.3.6) unstable; urgency=medium
 
   * Reviewed requirements.
