--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+python-sonicprobe (0.3.8) unstable; urgency=medium
+
+  * Reviewed requirements.
+
+ -- Adrien DELLE CAVE (Decryptus) <adc@doowan.net>  Sat, 23 Nov 2019 22:45:51 +0100
+
 python-sonicprobe (0.3.7) unstable; urgency=medium
 
   * Bug fixed urisup.
