--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+python-sonicprobe (0.3.10) unstable; urgency=medium
+
+  * Added possibility to fetch raw result with anysql.
+
+ -- Adrien DELLE CAVE (Decryptus) <adc@doowan.net>  Mon, 25 Nov 2019 20:13:44 +0100
+
 python-sonicprobe (0.3.9) unstable; urgency=medium
 
   * Reviewed option cursorclass for anysql with backmysql.
