--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+python-sonicprobe (0.3.11) unstable; urgency=medium
+
+  * Added mysql parameters for anysql.
+
+ -- Adrien DELLE CAVE (Decryptus) <adc@doowan.net>  Sun, 01 Dec 2019 00:53:55 +0100
+
 python-sonicprobe (0.3.10) unstable; urgency=medium
 
   * Added possibility to fetch raw result with anysql.
