--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+python-sonicprobe (0.3.14) unstable; urgency=medium
+
+  * Reviewed sonicprobe.libs.workerpool.
+
+ -- Adrien DELLE CAVE (Decryptus) <adc@doowan.net>  Wed, 04 Dec 2019 20:31:59 +0100
+
 python-sonicprobe (0.3.13) unstable; urgency=medium
 
   * Reviewed sonicprobe.libs.workerpool.
