--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,15 @@
+python-sonicprobe (0.3.19) unstable; urgency=medium
+
+  * Reviewed requirements.
+
+ -- Adrien DELLE CAVE (Decryptus) <adc@doowan.net>  Thu, 19 Dec 2019 06:22:32 +0100
+
+python-sonicprobe (0.3.18) unstable; urgency=medium
+
+  * Reviewed requirements.
+
+ -- Adrien DELLE CAVE (Decryptus) <adc@doowan.net>  Thu, 19 Dec 2019 06:21:03 +0100
+
 python-sonicprobe (0.3.17) unstable; urgency=medium
 
   * Reviewed requirements.
