--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+python-sonicprobe (0.3.20) unstable; urgency=medium
+
+  * Added PriorityQueue in sonicprobe.libs.workerpool.
+
+ -- Adrien DELLE CAVE (Decryptus) <adc@doowan.net>  Fri, 10 Jan 2020 12:54:09 +0100
+
 python-sonicprobe (0.3.19) unstable; urgency=medium
 
   * Reviewed requirements.
