--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,15 @@
+python-sonicprobe (0.3.22) unstable; urgency=medium
+
+  * Fixed version.
+
+ -- Adrien DELLE CAVE (Decryptus) <adc@doowan.net>  Fri, 10 Jan 2020 22:34:07 +0100
+
+python-sonicprobe (0.3.21) unstable; urgency=medium
+
+  * Fixed killall in sonicprobe.libs.workerpool.
+
+ -- Adrien DELLE CAVE (Decryptus) <adc@doowan.net>  Fri, 10 Jan 2020 22:32:43 +0100
+
 python-sonicprobe (0.3.20) unstable; urgency=medium
 
   * Added PriorityQueue in sonicprobe.libs.workerpool.
