--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+python-sonicprobe (0.3.24) unstable; urgency=medium
+
+  * Added method sonicprobe.libs.workerpool.WorkerPool.run_args.
+
+ -- Adrien DELLE CAVE (Decryptus) <adc@doowan.net>  Mon, 13 Jan 2020 09:40:38 +0100
+
 python-sonicprobe (0.3.23) unstable; urgency=medium
 
   * Added function helpers.get_nb_workers 
