--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+python-sonicprobe (0.3.28) unstable; urgency=medium
+
+  * Reviewed requirements.
+
+ -- Adrien DELLE CAVE (Decryptus) <adc@doowan.net>  Wed, 17 Jun 2020 10:09:03 +0200
+
 python-sonicprobe (0.3.27) unstable; urgency=medium
 
   * Added function sonicprobe.helpers.to_yaml.
