--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+python-sonicprobe (0.3.31) unstable; urgency=medium
+
+  * Reviewed six importation.
+
+ -- Adrien DELLE CAVE (Decryptus) <adc@doowan.net>  Thu, 17 Sep 2020 14:29:51 +0200
+
 python-sonicprobe (0.3.30) unstable; urgency=medium
 
   * Added argument check_version in MySQLConfigVersion.get_client / MySQLConfigVersion.get_mysqldump.
