--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+python-sonicprobe (0.3.34) unstable; urgency=medium
+
+  * Reviewed requirements.
+
+ -- Adrien DELLE CAVE (Decryptus) <adc@doowan.net>  Sun, 06 Dec 2020 21:34:06 +0100
+
 python-sonicprobe (0.3.33) unstable; urgency=medium
 
   * Fixed chmod on pidfile.
