--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+python-sonicprobe (0.3.35) unstable; urgency=medium
+
+  * Added subjectAltName, keyUsage and extendedKeyUsage in GenCert.
+
+ -- Adrien DELLE CAVE (Decryptus) <adc@doowan.net>  Sat, 12 Dec 2020 01:47:50 +0100
+
 python-sonicprobe (0.3.34) unstable; urgency=medium
 
   * Reviewed requirements.
