--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+python-sonicprobe (0.3.36) unstable; urgency=medium
+
+  * Added basicConstraints, nsCertType and subjectKeyIdentifier in GenCert.
+
+ -- Adrien DELLE CAVE (Decryptus) <adc@doowan.net>  Sat, 12 Dec 2020 09:52:33 +0100
+
 python-sonicprobe (0.3.35) unstable; urgency=medium
 
   * Added subjectAltName, keyUsage and extendedKeyUsage in GenCert.
