--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+python-sonicprobe (0.3.39) unstable; urgency=medium
+
+  * Reviewed requirements.
+
+ -- Adrien DELLE CAVE (Decryptus) <adc@doowan.net>  Sun, 07 Feb 2021 07:20:21 +0100
+
 python-sonicprobe (0.3.38) unstable; urgency=medium
 
   * Fixed X509 extension authorityKeyIdentifier in GenCert.
