--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+python-sonicprobe (0.3.40) unstable; urgency=medium
+
+  * Reviewed requirements.
+
+ -- Adrien DELLE CAVE (Decryptus) <adc@doowan.net>  Thu, 25 Feb 2021 22:08:06 +0100
+
 python-sonicprobe (0.3.39) unstable; urgency=medium
 
   * Reviewed requirements.
