--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+python-sonicprobe (0.3.41) unstable; urgency=medium
+
+  * Reviewed sonicprobe.libs.workerpool.
+
+ -- Adrien DELLE CAVE (Decryptus) <adc@doowan.net>  Thu, 22 Apr 2021 17:42:54 +0200
+
 python-sonicprobe (0.3.40) unstable; urgency=medium
 
   * Reviewed requirements.
