--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+python-sonicprobe (0.3.44) unstable; urgency=medium
+
+  * Added xys ienum.
+
+ -- Adrien DELLE CAVE (Decryptus) <adc@doowan.net>  Tue, 18 Jan 2022 06:04:05 +0100
+
 python-sonicprobe (0.3.43) unstable; urgency=medium
 
   * Added function sonicprobe.helpers.cmp.
