--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+python-sonicprobe (0.3.45) unstable; urgency=medium
+
+  * Fixed sonicprobe.helpers.to_yaml.
+
+ -- Adrien DELLE CAVE (Decryptus) <adc@doowan.net>  Thu, 27 Jan 2022 05:13:26 +0100
+
 python-sonicprobe (0.3.44) unstable; urgency=medium
 
   * Added xys ienum.
