--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+python-sonicprobe (0.3.46) unstable; urgency=medium
+
+  * Added function password_check in sonicprobe.helpers.
+
+ -- Adrien DELLE CAVE (Decryptus) <adc@doowan.net>  Tue, 09 Aug 2022 00:15:00 +0200
+
 python-sonicprobe (0.3.45) unstable; urgency=medium
 
   * Fixed sonicprobe.helpers.to_yaml.
