--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,15 @@
+python-sonicprobe (0.3.48) unstable; urgency=medium
+
+  * Fixed password_check in sonicprobe.helpers.
+
+ -- Adrien DELLE CAVE (Decryptus) <adc@doowan.net>  Sat, 24 Sep 2022 17:44:20 +0200
+
+python-sonicprobe (0.3.47) unstable; urgency=medium
+
+  * Reviewed requirements.
+
+ -- Adrien DELLE CAVE (Decryptus) <adc@doowan.net>  Tue, 09 Aug 2022 01:32:00 +0200
+
 python-sonicprobe (0.3.46) unstable; urgency=medium
 
   * Added function password_check in sonicprobe.helpers.
