--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+python-sonicprobe (0.3.49) unstable; urgency=medium
+
+  * Added libs/threading_udp_server.my.
+
+ -- Adrien DELLE CAVE (Decryptus) <adc@doowan.net>  Wed, 19 Oct 2022 10:31:20 +0200
+
 python-sonicprobe (0.3.48) unstable; urgency=medium
 
   * Fixed password_check in sonicprobe.helpers.
